Add actions deletion route
