# routes/actionMessages.js
@@ -2,20 +2,18 @@ const Router = require('koa-router');
 const { ActionMessage, Client } = require('@models');
 const { param } = require('@middlewares');
 
-const router = new Router({
-    prefix: '/clients/:clientId/actions',
-});
+const router = new Router();
 
 router
     .param('actionId', param(ActionMessage))
     .param('clientId', param(Client))
 
-    .get('/', async (ctx) => {
+    .get('/clients/:clientId/actions/', async (ctx) => {
         const actionMessages = await ActionMessage.find({ 'clients._id' : ctx.client.id }).select('-clients');
         ctx.body = actionMessages;
     })
 
-    .get('/:actionId', async (ctx) => {
+    .get('/clients/:clientId/actions/:actionId', async (ctx) => {
         try {
             console.log(ctx.actionMessage);
             const actionMessage = await ActionMessage.findOne({ 'clients._id' : ctx.client.id, _id: ctx.actionMessage.id }).select('-clients');
@@ -24,18 +22,11 @@ router
         } catch (err) {
             ctx.status = 404;
         }
-    });
-
-    /** 
-    .delete('/', async (ctx) => {
-        await ActionMessage.deleteMany({ clientId: ctx.client.id });
-        ctx.status = 204;
     })
 
-    .delete('/:actionMessageId', async (ctx) => {
-        await ActionMessage.deleteOne({ _id: ctx.actionMessage.id });
+    .delete('/actions/', async (ctx) => {
+        await ActionMessage.deleteMany({});
         ctx.status = 204;
     });
-    */
 
 module.exports = router;
